# django-mini-starbucks

./: .gitignore  README.md  pyproject.toml
apps/cart/: urls.py  views.py
apps/kiosk/: admin.py  apps.py  models.py  urls.py  views.py
apps/kiosk/migrations/: 0001_initial.py
apps/menu/: admin.py  models.py  urls.py  views.py
apps/menu/migrations/: 0001_initial.py
apps/order/: apps.py  forms.py  models.py  urls.py  views.py
apps/order/migrations/: 0001_initial.py  0002_alter_price_unique_together.py
config/: settings.py  urls.py
templates/: base.html
templates/cart/: cart.html
templates/kiosk/: cart.html  product_detail.html  product_list.html
templates/menu/: product_list.html
templates/order/: payment.html  product_detail.html  product_list.html
