[tool.poetry]
name = "django-mini-starbucks"
version = "0.1.0"
description = ""
authors = ["madEffort <madeffort0903@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
django = "^5.0.3"
python-decouple = "^3.8"
django-tailwind = "^3.8.0"
django-browser-reload = "^1.12.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
